# rc-project

./: README.md
HLS/: LinearImageFiltering.cpp  LinearImageFiltering.hpp  LinearImageFilteringTestbench.cpp  Makefile  Matrix.cpp  Matrix.hpp  config.cfg  synthesys.cfg  top.cpp  vitis-comp.json
HLS-Integer/: LinearImageFiltering.cpp  LinearImageFiltering.hpp  LinearImageFilteringTestbench.cpp  Makefile  Matrix.cpp  Matrix.hpp  config.cfg
HLS/work/: work.hlscompile_summary  work.hlsrun_cosim_summary  work.hlsrun_csim_summary
HLS/work/hls/: config.cmdline  hls_data.json
HLS/work/reports/: hls_compile.rpt  hls_cosim.rpt  v++_compile_work_guidance.html
Presentation/: main.tex  upb-beamer.cls
Project/: LinearImageFilter.xsa  LinearImageFiltering.xpr  LinearImageFiltering.xsa
Project/LinearImageFilter/: filtering.bda  sysdef.xml  xsa.json  xsa.xml
Project/LinearImageFiltering/: sysdef.xml  system.bda  xsa.json  xsa.xml
Project/LinearImageFiltering.cache/wt/: synthesis.wdf  webtalk_pa.xml
Project/LinearImageFiltering.runs/.jobs/: vrs_config_1.xml  vrs_config_16.xml  vrs_config_17.xml  vrs_config_2.xml  vrs_config_3.xml  vrs_config_5.xml  vrs_config_7.xml  vrs_config_8.xml
Project/LinearImageFiltering.runs/filtering_LinearImageFiltering_0_0_synth_1/: .vivado.begin.rst  dont_touch.xdc  filtering_LinearImageFiltering_0_0.tcl  filtering_LinearImageFiltering_0_0.vds  filtering_LinearImageFiltering_0_0_utilization_synth.pb  filtering_LinearImageFiltering_0_0_utilization_synth.rpt  gen_run.xml  htr.txt  rundef.js  runme.sh  vivado.jou  vivado.pb
Project/LinearImageFiltering.runs/filtering_LinearImageFiltering_0_1_synth_1/: .vivado.begin.rst  dont_touch.xdc  filtering_LinearImageFiltering_0_1.tcl  filtering_LinearImageFiltering_0_1.vds  filtering_LinearImageFiltering_0_1_utilization_synth.pb  filtering_LinearImageFiltering_0_1_utilization_synth.rpt  gen_run.xml  htr.txt  rundef.js  runme.sh  vivado.jou  vivado.pb
Project/LinearImageFiltering.runs/filtering_auto_pc_0_synth_1/: .vivado.begin.rst  dont_touch.xdc  filtering_auto_pc_0.tcl  filtering_auto_pc_0.vds  filtering_auto_pc_0_utilization_synth.rpt  gen_run.xml  htr.txt  rundef.js  runme.sh  vivado.jou  vivado.pb
Project/LinearImageFiltering.runs/filtering_auto_pc_1_synth_1/: .vivado.begin.rst  dont_touch.xdc  filtering_auto_pc_1.dcp  filtering_auto_pc_1.tcl  filtering_auto_pc_1.vds  filtering_auto_pc_1_utilization_synth.pb  filtering_auto_pc_1_utilization_synth.rpt  gen_run.xml  htr.txt  rundef.js  runme.sh  vivado.jou  vivado.pb
Project/LinearImageFiltering.runs/filtering_auto_us_0_synth_1/: .vivado.begin.rst  dont_touch.xdc  filtering_auto_us_0.dcp  filtering_auto_us_0.tcl  filtering_auto_us_0.vds  filtering_auto_us_0_utilization_synth.pb  filtering_auto_us_0_utilization_synth.rpt  gen_run.xml  htr.txt  rundef.js  runme.sh  vivado.jou  vivado.pb
Project/LinearImageFiltering.runs/filtering_auto_us_1_synth_1/: .vivado.begin.rst  dont_touch.xdc  filtering_auto_us_1.tcl  filtering_auto_us_1.vds  gen_run.xml  htr.txt  rundef.js  runme.sh  vivado.jou  vivado.pb
Project/LinearImageFiltering.runs/filtering_auto_us_2_synth_1/: .vivado.begin.rst  dont_touch.xdc  filtering_auto_us_2.tcl  filtering_auto_us_2.vds  filtering_auto_us_2_utilization_synth.pb  filtering_auto_us_2_utilization_synth.rpt  gen_run.xml  htr.txt  rundef.js  runme.sh  vivado.jou  vivado.pb
Project/LinearImageFiltering.runs/filtering_processing_system7_0_0_synth_1/: .vivado.begin.rst  dont_touch.xdc  filtering_processing_system7_0_0.dcp  filtering_processing_system7_0_0.tcl  filtering_processing_system7_0_0.vds  filtering_processing_system7_0_0_utilization_synth.rpt  gen_run.xml  htr.txt  rundef.js  runme.sh  vivado.jou  vivado.pb
Project/LinearImageFiltering.runs/filtering_rst_ps7_0_100M_0_synth_1/: .vivado.begin.rst  dont_touch.xdc  filtering_rst_ps7_0_100M_0.dcp  filtering_rst_ps7_0_100M_0.tcl  filtering_rst_ps7_0_100M_0.vds  filtering_rst_ps7_0_100M_0_utilization_synth.rpt  gen_run.xml  htr.txt  rundef.js  runme.sh  vivado.jou  vivado.pb
Project/LinearImageFiltering.runs/filtering_xbar_0_synth_1/: .vivado.begin.rst  dont_touch.xdc  filtering_xbar_0.dcp  filtering_xbar_0.tcl  filtering_xbar_0.vds  (+8 more)
Pynq/: LinearImageFiltering.bit  LinearImageFiltering.hwh  LinearImageFiltering.ipynb
Pynq/Version1/: LinearImageFilter.hwh
Pynq/Version2/: LinearImageFilter.bit  LinearImageFilter.hwh
Pynq/Version3/: LinearImageFilter.bit  LinearImageFilter.hwh
Pynq/Version4/: LinearImageFilter.bit  LinearImageFilter.hwh
Pynq/Version5/: LinearImageFilter.bit  LinearImageFilter.hwh
Pynq/Version6/: LinearImageFilter.bit  LinearImageFilter.hwh
Reference/: CMakeLists.txt  Matrix.cpp  Matrix.hpp  Types.hpp  main.cpp
ReferenceAntique/: CMakeLists.txt  Matrix.cpp  Matrix.hpp  Types.hpp  main.cpp
(+1104 files in other folders)
